updated workflow to run tests using Makefile and also perform image scans

--- a/.cloudbees/workflows/workflow.yaml
+++ b/.cloudbees/workflows/workflow.yaml
@@ -19,11 +19,12 @@ jobs:
       name: Get source code
       uses: cloudbees-io/checkout@v1
 
-    - id: unit-test-scan
-      name: Unit tests and static code analysis
-      uses: calculi-corp/cb-internal-shared-actions/go-test@go-test/v1
-      with:
-        min-coverage: "83.5"
+    - id: unit-test
+      name: Unit tests
+      uses: docker://golang:1.22.5
+      run: |
+        go version
+        make test
 
     - id: lint
       name: Lint
@@ -46,15 +47,6 @@ jobs:
       if: ${{ vars.workflow_execution_env == 'production' }}
       uses: cloudbees-io/configure-ecr-credentials@v1
 
-    - id: dockerhub-login
-      name: Login to Dockerhub using CloudBees service account
-      if: ${{ vars.workflow_execution_env == 'production' }}
-      uses: cloudbees-io/configure-oci-credentials@v1
-      with:
-        registry: docker.io
-        username: ${{ secrets.e5bbc3_dockerhub_user }}
-        password: ${{ secrets.e5bbc3_dockerhub_password }}
-
     - id: build-image
       name: Build container image
       if: ${{ vars.workflow_execution_env == 'production' }}
@@ -62,3 +54,10 @@ jobs:
       with:
         destination: ${{ vars.staging_image_registry }}/registry-config:${{ cloudbees.version }}${{ cloudbees.scm.branch == 'main' && format(',{0}/registry-config:latest', vars.staging_image_registry) || '' }}
         build-args: VERSION=${{ cloudbees.version }}
+        registry-mirrors: 020229604682.dkr.ecr.us-east-1.amazonaws.com/docker-hub
+
+    - name: Run TruffleHog Container Action
+      uses: cloudbees-io/trufflehog-secret-scan-container@v1
+      with:
+        image-location: ${{ vars.staging_image_registry }}/registry-config
+        image-tag: ${{ cloudbees.version }}
